# surgetrader

./: .gitignore  ACKNOWLEDGEMENTS.md  LICENSE  README-0.md  README-periodic.md  README-telegram.md  README.md  pyproject.toml  requirements.txt
doc/dev/: rdbms.md
doc/media/: 1-1-18-monthly-summary.md
etc/: intro-article.md  reddit.md
etc/hacking/: cancelorder.py
etc/hacking/understanding-order-data/: notes.md
src/: system.ini.sample  tasks.py
src/etc/: batch-buy.py  batch-download.py  batch-takeprofit.py  dailyprofit.py  percent_gain.py  sellall.py
src/lib/: buy.py  buy_test.py  config.py  config_test.py  db.py  download.py  emailer.py  logconfig.py  mybittrex.py  mybittrex_test.py  sellall.py  stoploss.py  takeprofit.py  telegram.py  telegram_test.py
src/lib/exchange/: abstract.py  binance.py  bittrex.py  concrete.py  kucoin.py
src/lib/report/: profit.html  profit.py
src/log/: surgetrader.sample
src/sh/: README.md  build.py  gohup  parsers.ini.sample
src/sql/: removeOldMarketData.sql
src/users/: useraccount-binance.ini.sample  useraccount-bittrex.ini.sample  users.py
